--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "llmweb"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2024"
 description = "Powering the Web with Rust & LLMs"
 license = "MIT"
@@ -16,3 +16,4 @@ serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 regex = "1.0"
 thiserror = "2"
+clap = { version = "4.0", features = ["derive"] }
