--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 name = "llmweb"
-version = "0.1.1"
+version = "0.1.2"
 edition = "2024"
 description = "Powering the Web with Rust & LLMs"
 license = "MIT"
-repository = "https://github.com/zTgx/llmweb.rs"
+repository = "https://github.com/zTgx/llmweb"
 readme = "README.md"
 keywords = ["llm", "web"]
 
