--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,6 @@ serde = { version = "1.0", features = ["derive"] }
 regex = "1.0"
 thiserror = "2"
 clap = { version = "4.0", features = ["derive"] }
+
+[dev-dependencies]
+chrono = "0.4.41"
