--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
 name = "llmweb"
-version = "0.1.6"
+version = "0.1.7"
 edition = "2024"
-description = "Powering the Web with Rust & LLMs"
+description = "Webpage to structured data in Rust & LLM"
 license = "MIT"
 repository = "https://github.com/zTgx/llmweb"
 readme = "README.md"
-keywords = ["llm", "web"]
+keywords = ["llm", "web", "scraper", "structured data", "headless chrome"]
 
 [[bin]]
 name = "llmweb-cli"
