--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ description = "Webpage to structured data in Rust & LLM"
 license = "MIT"
 repository = "https://github.com/zTgx/llmweb"
 readme = "README.md"
-keywords = ["llm", "web", "scraper", "structured data", "headless chrome"]
+keywords = ["llm", "web", "scraper"]
 
 [[bin]]
 name = "llmweb-cli"
